--- a/example.html
+++ b/example.html
@@ -5,18 +5,13 @@
    <title>AboutMe</title>
 </head>
 
-
-
-
-
-
 <h1>Hi, Im Brenda</h1>
 <p>Im going to be a senior this fall. I hate waking up early</p>
 
 
   <li>Favorite Movies: Nightmare Before Christmas, Edward Scissorhands, and BeetleJuice </li>
 
-  <li> Favorite Shows: Riverdale, Life Sentence, Claws, Steven Universe,Stranger Things
+  <li> Favorite Shows: Riverdale, Life Sentence, Claws, Steven Universe,Stranger Things </li>
 
   <li>Likes: Swimming, Alternative Music, Anime, Drawing, Studio Ghibli </li>
 
@@ -30,7 +25,9 @@
 <img height="200" width="250" src="Lucy_Hale.jpg"/>
 
 <p></p>
-<a href= "http://www.cnn.com">News</a>
+<a href= "https://www.youtube.com/watch?v=N-uqwX7ODp0">Lucy Hale Video</a>
+
+ <a href="maps.html">My maps API</a>
 
 <style>
 h1{
@@ -51,6 +48,6 @@ body {
   background-image: url("Galaxy.jpg");
   background-size: 2440px 750px;
   background-repeat: no-repeat;
-
- <style>
+}
+</style>
 </html>
